# two_state_information_filter

./: .gitignore  CMakeLists.txt  README.md  Readme.md  package.xml
cfg/: vio.cfg  vio_task.cfg
include/generalized_information_filter/: BinaryResidual.hpp  Element.hpp  ElementDefinition.hpp  Filter.hpp  Measurement.hpp  Model.hpp  PairwiseResidual.hpp  Prediction.hpp  State.hpp  StateDefinition.hpp  Transformation.hpp  UnaryUpdate.hpp  binary-residual.h  common.h  common.hpp  element-definition.h  element-description.h  element-vector-definition.h  element-vector.h  element.h  filter.h  measurement.h  model.h  prediction.h  state-definition.h  state.h  transformation.h  unary-update.h
include/generalized_information_filter/filters/: blind-mav-filter.h  imu-pose-filter.h
include/generalized_information_filter/measurements/: acc-meas.h  imu-meas.h  pose-meas.h  ror-meas.h
include/generalized_information_filter/residuals/: IMUPrediction.hpp  PoseUpdate.hpp  attitude-findif.h  height-meas.h  height-update.h  imu-prediction.h  imuror-update.h  kinematics-model.h  landmark-findif.h  landmark-prediction-augmented.h  landmark-prediction.h  leg-dynamic-residual.h  leg-kinematic-update.h  legged-robot-dynamic-residual.h  mav-dynamic-findif.h  mav-dynamic-residual.h  pose-ib-update.h  pose-update.h  random-walk-prediction.h  robcen-imuacc-findif-residual.h  robcen-imuror-update.h  robcen-landmark-findif-residual.h  robcen-rotrate-findif-residual.h  robcen-velocity-findif-residual.h
include/generalized_information_filter/residuals/robocentric/: imuacc-findif.h  landmark-findif.h  position-findif.h
include/tsif/: common.h  element.h  element_vector.h  filter.h  filter_with_definition.h  model.h  residual.h  timeline.h  unit_vector.h
include/tsif/filters/: example_filter.h  example_filter_definition.h  imu_gps.h  vio.h
include/tsif/residuals/: accelerometer_prediction.h  accelerometer_prediction_alternative.h  attitude_findif.h  attitude_findif_alternative.h  attitude_update.h  bearing_findif.h  distance_findif.h  force_based_linear_velocity_prediction.h  force_based_velocity_prediction.h  gyroscope_update.h  image_update.h  kinematics_update.h  kinematics_update.hpp  landmark_findif.h  landmark_in_base_findif.h  landmark_in_base_update.h  landmark_in_odom_update.h  landmark_update.h  linear_velocity_update.h  map_centric_attitude_update.h  map_centric_position_update.h  odometry_attitude_update.h  odometry_position_update.h  pose_update.h  position_findif.h  position_findif_offset.h  position_update.h  quaternion_copy_update.h  random_walk.h  scalar_random_walk.h  torque_based_angular_velocity_prediction.h  two_weight_random_walk.h  vector_copy_update.h  zero_velocity_update.h
include/tsif/utils/: camera.h  common.h  logging.h  option.h  random.h  rotation.h  simulator.h  timing.h  typedefs.h
src/: Measurement.cpp  State.cpp  StateDefinition.cpp  camera.cpp  element-vector-definition.cc  element-vector.cc  measurement.cc  simulator.cpp  state-definition.cc  state.cc  test.cpp  testFilter.cpp  testSimple.cpp  testStateNew.cpp  test_imu_gps.cpp  test_quaternion.cpp  test_state.cpp  test_timeline.cpp  test_unit_vector.cpp  test_vio.cpp
test/: test-simple.cc
